<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2017 Google Inc.
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->
<resources>
  <string name="app_name">Android Samba Client</string>

  <string name="share_path">Share Path e.g. smb://server/share</string>
  <string name="domain">Domain</string>
  <string name="username">Username</string>
  <string name="password">Password</string>

  <string name="needs_password">My file share needs a password</string>

  <string name="mount">Mount</string>
  <string name="cancel">Cancel</string>

  <string name="no_active_network">No active network detected. Please check your network.</string>
  <string name="share_path_malformed">Share path is incorrectly formatted.</string>
  <string name="share_already_mounted">This share is already mounted.</string>
  <string name="share_mounted">File share has been mounted.</string>
  <string name="failed_mounting">Failed to mount share. Please try again.</string>
  <string name="credential_error">Access to read was denied. Please check your credential and permission.</string>

  <string name="mounting_share">Mounting file share&#8230;</string>

  <string name="view_folder_denied">You need permission to view this folder.</string>

  <string name="gplv3_link">
    <a href="https://www.gnu.org/licenses/gpl-3.0-standalone.html">GPL v3.0</a>
  </string>

  <!-- Menu Items -->
  <string name="send_feedback">Send feedback</string>

  <string name="no_web_browser">It needs a web browser to send feedback.</string>

  <string name="browsing_root_name">Samba Shares</string>
  <string name="browsing_waiting_prompt">Looking for shares…</string>

  <string name="pin_this_share">Pin this share</string>
  <string name="login">Login</string>
  <string name="authenticating">Authenticating...</string>
  <string name="empty_credentials">Username and password can not be empty!</string>
</resources>
